Bug 266622 - [WPE] WPE Platform: fix a crash when handling wayland DMA-BUF feedback with some compositors
Summary: [WPE] WPE Platform: fix a crash when handling wayland DMA-BUF feedback with s...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WPE WebKit (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Carlos Garcia Campos
URL:
Keywords:
Depends on:
Blocks: WPEPlatformAPI
  Show dependency treegraph
 
Reported: 2023-12-19 01:31 PST by Carlos Garcia Campos
Modified: 2023-12-19 04:02 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Garcia Campos 2023-12-19 01:31:15 PST
Some compositors like weston don't sent the format table on every feedback message, but only the first time.
Comment 1 Carlos Garcia Campos 2023-12-19 01:33:52 PST
Pull request: https://github.com/WebKit/WebKit/pull/22012
Comment 2 EWS 2023-12-19 04:01:58 PST
Committed 272262@main (ec311d6d964b): <https://commits.webkit.org/272262@main>

Reviewed commits have been landed. Closing PR #22012 and removing active labels.