[WPE] WPE Platform: fix a crash when handling wayland DMA-BUF feedback with some compositors https://bugs.webkit.org/show_bug.cgi?id=266622

Reviewed by Alejandro G. Castro.

Some compositors like weston don't sent the format table on every
feedback message, but only the first time. Handle that case in main
device message by stealing the format table from the previous committed
feedback.

* Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:
(DMABufFeedback::FormatTable::FormatTable):
(DMABufFeedback::FormatTable::~FormatTable):
(DMABufFeedback::create):
(DMABufFeedback::DMABufFeedback):
(DMABufFeedback::format):
(DMABufFeedback::~DMABufFeedback): Deleted.

Canonical link: https://commits.webkit.org/272262@main