Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp
@@ -56,26 +56,54 @@ typedef struct wl_buffer *(EGLAPIENTRYP PFNEGLCREATEWAYLANDBUFFERFROMIMAGEWL)(EG
 struct DMABufFeedback {
     WTF_MAKE_STRUCT_FAST_ALLOCATED;
 
-    DMABufFeedback(unsigned size, int fd)
-    {
-        formatTable.size = size;
-        formatTable.data = static_cast<FormatTable::Data*>(mmap(nullptr, size, PROT_READ, MAP_PRIVATE, fd, 0));
-    }
-
-    ~DMABufFeedback()
-    {
-        if (formatTable.data && formatTable.data != MAP_FAILED)
-            munmap(formatTable.data, formatTable.size);
-    }
-
     struct FormatTable {
-        unsigned size { 0 };
         struct Data {
             uint32_t format { 0 };
             uint32_t padding { 0 };
             uint64_t modifier { 0 };
-        } *data { nullptr };
+        };
+
+        FormatTable(const FormatTable&) = delete;
+        FormatTable& operator=(const FormatTable&) = delete;
+        FormatTable(FormatTable&& other)
+            : size(other.size)
+            , data(other.data)
+        {
+            other.size = 0;
+            other.data = nullptr;
+        }
+
+        FormatTable(unsigned size, Data* data)
+            : size(size)
+            , data(data)
+        {
+        }
+
+        ~FormatTable()
+        {
+            if (data)
+                munmap(data, size);
+        }
+
+        unsigned size { 0 };
+        Data* data { nullptr };
     };
+
+    static std::unique_ptr<DMABufFeedback> create(unsigned size, int fd)
+    {
+        auto* data = static_cast<FormatTable::Data*>(mmap(nullptr, size, PROT_READ, MAP_PRIVATE, fd, 0));
+        if (data == MAP_FAILED)
+            return nullptr;
+
+        return makeUnique<DMABufFeedback>(FormatTable(size, data));
+    }
+
+    explicit DMABufFeedback(FormatTable&& table)
+        : formatTable(WTFMove(table))
+    {
+    }
+
+    ~DMABufFeedback() = default;
 
     struct Tranche {
         uint32_t flags { 0 };
@@ -84,8 +112,6 @@ struct DMABufFeedback {
 
     std::pair<uint32_t, uint64_t> format(uint16_t index)
     {
-        if (!formatTable.data || formatTable.data == MAP_FAILED)
-            return { 0, 0 };
         return { formatTable.data[index].format, formatTable.data[index].modifier };
     }
 
@@ -240,32 +266,37 @@ static const struct zwp_linux_dmabuf_feedback_v1_listener linuxDMABufFeedbackLis
     [](void* data, struct zwp_linux_dmabuf_feedback_v1*, int32_t fd, uint32_t size)
     {
         auto* priv = WPE_VIEW_WAYLAND(data)->priv;
-        priv->pendingDMABufFeedback = makeUnique<DMABufFeedback>(size, fd);
+        priv->pendingDMABufFeedback = DMABufFeedback::create(size, fd);
         close(fd);
     },
     // main_device
-    [](void*, struct zwp_linux_dmabuf_feedback_v1*, struct wl_array*)
+    [](void* data, struct zwp_linux_dmabuf_feedback_v1*, struct wl_array*)
     {
+        auto* priv = WPE_VIEW_WAYLAND(data)->priv;
+        // Compositor might not re-send the format table. In that case, try to reuse the previous one.
+        if (!priv->pendingDMABufFeedback && priv->committedDMABufFeedback)
+            priv->pendingDMABufFeedback = makeUnique<DMABufFeedback>(WTFMove(priv->committedDMABufFeedback->formatTable));
+
         // FIXME: handle main device.
     },
     // tranche_done
     [](void* data, struct zwp_linux_dmabuf_feedback_v1*)
     {
         auto* priv = WPE_VIEW_WAYLAND(data)->priv;
+        if (!priv->pendingDMABufFeedback)
+            return;
+
         priv->pendingDMABufFeedback->tranches.append(WTFMove(priv->pendingDMABufFeedback->pendingTranche));
     },
     // tranche_target_device
     [](void*, struct zwp_linux_dmabuf_feedback_v1*, struct wl_array*)
     {
-        // FIXME: handle target device.
     },
     // tranche_formats
     [](void* data, struct zwp_linux_dmabuf_feedback_v1*, struct wl_array* indices)
     {
         auto* priv = WPE_VIEW_WAYLAND(data)->priv;
-        if (!priv->pendingDMABufFeedback->formatTable.data && priv->committedDMABufFeedback)
-            priv->pendingDMABufFeedback->formatTable = WTFMove(priv->committedDMABufFeedback->formatTable);
-        if (!priv->pendingDMABufFeedback->formatTable.data || priv->pendingDMABufFeedback->formatTable.data == MAP_FAILED)
+        if (!priv->pendingDMABufFeedback)
             return;
 
         const char* end = static_cast<const char*>(indices->data) + indices->size;
@@ -276,7 +307,8 @@ static const struct zwp_linux_dmabuf_feedback_v1_listener linuxDMABufFeedbackLis
     [](void* data, struct zwp_linux_dmabuf_feedback_v1*, uint32_t flags)
     {
         auto* priv = WPE_VIEW_WAYLAND(data)->priv;
-        priv->pendingDMABufFeedback->pendingTranche.flags |= flags;
+        if (priv->pendingDMABufFeedback)
+            priv->pendingDMABufFeedback->pendingTranche.flags |= flags;
     }
 };
 
